--- a/aria2.conf
+++ b/aria2.conf
@@ -5,7 +5,7 @@ save-session=/Users/capric98/.config/aria2/aria2.session
 save-session-interval=60
 
 continue=true
-all-proxy=http://127.0.0.1:1080
+# all-proxy=http://127.0.0.1:1080
 max-concurrent-downloads=3
 max-download-limit=0
 max-overall-download-limit=0
@@ -24,7 +24,7 @@ rpc-listen-all=false
 rpc-listen-port=6800
 rpc-allow-origin-all=true
 
-max-connection-per-server=8
+max-connection-per-server=3
 min-split-size=16M
 split=32
 # user-agent=
